--- a/core/common/src/main/res/values/strings.xml
+++ b/core/common/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="next">Next</string>
     <string name="get_started">Get Started</string>
     <string name="back">Back</string>
+    <string name="bookmark">Bookmark</string>
 </resources>
