--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="next">Next</string>
+    <string name="get_started">Get Started</string>
+    <string name="back">Back</string>
+    <string name="bookmark">Bookmark</string>
+    <string name="home">Home</string>
     <string name="search">Search</string>
 </resources>
