--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="bookmark">Bookmark</string>
     <string name="home">Home</string>
     <string name="search">Search</string>
+    <string name="close">Close</string>
 </resources>
