Empty screen fix

--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="home">Home</string>
     <string name="search">Search</string>
     <string name="close">Close</string>
+    <string name="no_articles_found">No articles found</string>
 </resources>
